--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,9 @@
 body {
     background-color: #00cae4;
 }
+footer {
+    margin: 0;
+    transform: rotate(-45deg);
+    transition: transform 0.5s;
+    text-shadow: 0 0 5px #01579b;
+}
